<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_back_white" />


        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="Create New Account"
            android:textColor="@color/white"
            android:textSize="28dp" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="245dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <!--Name-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="25dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="10dp"
                    android:hint="Name"
                    android:inputType="textPersonName|textCapWords"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/gray01" />
            </com.google.android.material.textfield.TextInputLayout>



            <!--pincode-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pincodeTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTil"
                android:layout_marginTop="5dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/pincodeEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_location"
                    android:drawablePadding="10dp"
                    android:hint="Pincode"
                    android:inputType="textPostalAddress"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/gray01" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_below="@id/pincodeTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_email_gray"
                    android:drawablePadding="10dp"
                    android:hint="email"
                    android:textColorHint="@color/gray01"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/Black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTil"
                android:layout_marginTop="5dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_lock_24"
                    android:drawablePadding="10dp"
                    android:hint="password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/gray02" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--confirm password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmpasswordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTil"
                android:layout_marginTop="5dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/confirmpasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_lock_24"
                    android:drawablePadding="10dp"
                    android:hint="confirm password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/gray01" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--login Btn-->
            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirmpasswordTil"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button01"
                android:text="Register"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>