...
        android:layout_marginTop="10dp"
        android:text="welcome to Sticky Notes"
        android:textColor="@color/Black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/try_freeBtn"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_button01"
        android:text="Login"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/try_freeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
